# autonomous-drone-for-dynamic-smoke-plume-tracking

./: .gitignore  CMakeLists.txt  README.md  cnn_policy.py  continue_train_PPO.py  detection_sp.py  drone_env_xyz_disc_7actions.py  inference_PPO.py  package.xml  simCam_node_2.py  train_PPO_xyz_discrete.py
.catkin_tools/profiles/default/: devel_collisions.txt
docs/: index.html
install_scripts/: install_jetson_dependencies.sh  requirements.txt
launch/: smoke_track_jetson.launch  smoke_track_jetson.sh  smoke_track_sim.launch  smoke_track_sim.sh  smoke_track_sim_evaluation_mode.launch
src/: controller_node.py  drone_env_PPO.py  hover_observer_drone.py  mapping_2D_to_3D.py  observe_drone_tracking.py  opticalflow_node.py  segmentation_node.py  train_PPO.py
src/autonomous_smoke_tracking_drone/: CMakeLists.txt  package.xml
src/autonomous_smoke_tracking_drone/install_scripts_sim/: install_dependencies.sh
src/autonomous_smoke_tracking_drone/launch/: smoke_track_jetson.launch
src/autonomous_smoke_tracking_drone/src/scripts/: simCam_node_1.py
src/scripts/: continue_train_PPO.py  inference_PPO.py
