<?xml version="1.0"?>
<package format="2">
  <name>autonomous_drone_for_dynamic_smoke_plume_tracking</name>
  <version>1.0.0</version>
  <description>The Autonmous Drone for Dynamic Smoke Tracking project package</description>

  <!-- Maintainer information -->
  <maintainer email="pal00036@umn.edu">Srijan Kumar Pal</maintainer>
  <maintainer email="srijanpal07@gmail.com">Srijan Kumar Pal</maintainer>

  <!--   License -->
  <license>MIT</license>


  <!-- URLs for project metadata -->
  <!-- <url type="website">http://wiki.ros.org/autonomous_smoke_tracking_drone</url> -->


  <!-- Author information -->
  <author email="pal00036@umn.edu">Srijan Kumar Pal</author>
  <author email="srijanpal07@gmail.com">Srijan Kumar Pal</author>


  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <!-- Export -->
  <export>
    <!-- Include message or service generation here if applicable -->

  </export>
</package>
